--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -68,6 +68,7 @@ footer{
             h3{
                 margin-left: 12px;
                 font-size: 20px;
+                font-weight: 600;
             }
             ul{
                 list-style: none;
