--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1290,7 +1290,8 @@ footer .footer-contenedor {
       footer .footer-contenedor div h3 {
         font-weight: 600; }
     footer .footer-contenedor .redes {
-      margin-top: 50px;
+      margin: 0;
+      margin-top: 20px;
       justify-content: center;
       align-items: center;
       height: 150px; }
@@ -1352,6 +1353,8 @@ footer .footer-contenedor {
   footer .footer-contenedor ul li a p {
     font-family: 'Lato', sans-serif;
     font-size: 11px; }
+  footer .footer-contenedor .redes {
+    margin-top: 20px; }
   .nosotros-pag .nosotros-contenedor .nosotros-info h3 {
     font-size: 25px;
     margin: 10px 7px 10px 7px; }
@@ -1691,7 +1694,8 @@ footer .footer-contenedor {
     display: grid;
     grid-template-columns: repeat 2, 1fr;
     grid-template-areas: "footer footer" "footer footer";
-    margin-bottom: 0; }
+    margin-bottom: 0;
+    margin-top: 20px; }
     footer .footer-contenedor div {
       grid-area: "footer";
       display: flex;
@@ -1700,28 +1704,28 @@ footer .footer-contenedor {
       align-items: start;
       width: auto;
       height: 220px;
-      font-size: 12px;
+      font-size: 13px;
       gap: 3px;
-      margin-bottom: 4px;
+      margin: 0;
       padding: 0; }
       footer .footer-contenedor div h3 {
         font-family: 'Lato', sans-serif;
-        font-size: 11px;
+        font-size: 13px;
         width: 100%;
         height: auto;
-        margin-bottom: 0; }
+        margin: 0;
+        margin-left: 7px; }
       footer .footer-contenedor div ul {
-        padding: 2px;
-        margin: 2px;
-        margin-top: 0; }
+        margin-top: 0;
+        padding: 0;
+        margin: 0; }
         footer .footer-contenedor div ul li a p {
           margin: 7px;
-          font-size: 11px; }
-      footer .footer-contenedor div .redes {
-        margin-top: 12px;
-        justify-content: center;
-        align-items: start;
-        height: auto; } }
+          font-size: 12px; }
+    footer .footer-contenedor .redes {
+      margin: 20px;
+      margin-top: 0;
+      height: 200px; } }
 
 @media screen and (max-width: 400px) {
   main .rebajas-img {
@@ -1737,14 +1741,7 @@ footer .footer-contenedor {
       height: 280px; } }
 
 @media screen and (max-width: 390px) {
-  footer .footer-contenedor .redes h3 {
-    font-family: 'Lato', sans-serif;
-    font-size: 11px;
-    text-align: center; }
-  footer .footer-contenedor .redes ul li a img {
-    width: 35px;
-    height: 35px; }
-  footer .footer-contenedor .redes div {
+  footer .footer-contenedor div {
     grid-area: "footer";
     display: flex;
     justify-content: center;
@@ -1752,7 +1749,12 @@ footer .footer-contenedor {
     align-items: start;
     width: auto;
     height: 240px;
-    font-size: 10px;
+    font-size: 14px;
     gap: 1px;
     margin-bottom: 2px;
-    padding: 0; } }
+    padding: 0; }
+  footer .footer-contenedor .redes h3 {
+    font-size: 13px; }
+  footer .footer-contenedor .redes ul li a img {
+    width: 35px;
+    height: 35px; } }
