--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -25,7 +25,7 @@ footer{
                         margin: 2px;
                         padding: 2px;
                         height: 45px;
-                        .suscribite-footer{
+                        input{
                             height: 45px;
                             width: 380px;
                         }
