--- a/css/estilos.css
+++ b/css/estilos.css
@@ -20,7 +20,7 @@ header {
     text-align: center;
     font-size: 20px;
     font-family: 'Lato', sans-serif;
-    font-style: italic;
+    font-weight: 700;
     background-color: black;
     height: 40px; }
   header div {
@@ -118,6 +118,14 @@ main .recomendados {
         justify-content: center;
         width: auto;
         height: auto; }
+        main .recomendados .recomendados-contenedor div a .rebajas-recomendados {
+          position: absolute;
+          z-index: 20px;
+          width: 52px;
+          font-weight: 600;
+          background-color: #FF2931;
+          color: white;
+          font-size: 12px; }
         main .recomendados .recomendados-contenedor div a img {
           width: 170px;
           height: 170px;
@@ -171,7 +179,8 @@ main .moda {
           width: 215px;
           height: 215px;
           margin: top 0;
-          object-fit: cover; }
+          object-fit: cover;
+          border-radius: 2%; }
         main .moda .moda-contenedor div a h3 {
           text-align: center;
           font-size: 17px;
@@ -210,12 +219,31 @@ main .disciplinas {
           height: 370px;
           transition: 0.5s;
           transition-delay: 0.05s;
-          flex-wrap: wrap; }
+          flex-wrap: wrap;
+          border-radius: 5%; }
         main .disciplinas .disciplinas-contenedor div a img:hover {
           transform: scale(1.05);
           box-shadow: 10px 10px 16px -7px rgba(0, 0, 0, 0.75);
           -webkit-box-shadow: 10px 10px 16px -7px rgba(0, 0, 0, 0.75);
           -moz-box-shadow: 10px 10px 16px -7px rgba(0, 0, 0, 0.75); }
+
+main .hombre-mujer {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 100px;
+  margin-bottom: 200px;
+  width: 100%; }
+  main .hombre-mujer div {
+    width: auto;
+    height: auto;
+    display: flex; }
+    main .hombre-mujer div a img {
+      width: 370px;
+      height: 370px;
+      transition-duration: 1.5s;
+      border-radius: 5%; }
+    main .hombre-mujer div a img:hover {
+      transform: rotateY(360deg); }
 
 .calzado-pag {
   height: auto;
@@ -263,7 +291,8 @@ main .disciplinas {
           width: 220px;
           height: 220px;
           text-align: center;
-          justify-content: center; }
+          justify-content: center;
+          border-radius: 2%; }
         .calzado-pag .calzado-contenedor .productos a h3 {
           text-align: center;
           justify-content: center;
@@ -332,7 +361,8 @@ main .disciplinas {
           width: 220px;
           height: 220px;
           text-align: center;
-          justify-content: center; }
+          justify-content: center;
+          border-radius: 2%; }
         .indumentaria-pag .indumentaria-contenedor .productos a h3 {
           text-align: center;
           justify-content: center;
@@ -399,7 +429,8 @@ main .disciplinas {
           width: 220px;
           height: 220px;
           text-align: center;
-          justify-content: center; }
+          justify-content: center;
+          border-radius: 2%; }
         .accesorios-pag .accesorios-contenedor .productos a h3 {
           text-align: center;
           justify-content: center;
@@ -463,16 +494,25 @@ main .disciplinas {
         text-align: center;
         justify-content: center;
         width: 270px;
-        height: auto; }
+        height: auto;
+        position: relative; }
         .rebajas-pag .rebajas-contenedor .imagenes-rebajas a .texto-rebajas {
+          position: absolute;
           z-index: 10px;
           top: 5px;
-          left: 10%; }
+          left: 30px;
+          width: 50px;
+          font-weight: 600;
+          background-color: #FF2931;
+          color: white;
+          font-size: 12px; }
         .rebajas-pag .rebajas-contenedor .imagenes-rebajas a img {
           width: 220px;
           height: 220px;
           text-align: center;
-          justify-content: center; }
+          justify-content: center;
+          position: relative;
+          border-radius: 2%; }
         .rebajas-pag .rebajas-contenedor .imagenes-rebajas a .producto-rebaja {
           text-align: center;
           justify-content: center;
@@ -797,6 +837,11 @@ footer .footer-contenedor {
         justify-content: center;
         width: 250px;
         height: auto; }
+        .rebajas-pag .rebajas-contenedor .imagenes-rebajas a .texto-rebajas {
+          font-size: 9px;
+          font-weight: 400;
+          width: 40px;
+          left: 45px; }
         .rebajas-pag .rebajas-contenedor .imagenes-rebajas a img {
           width: 170px;
           height: 170px;
@@ -1117,6 +1162,10 @@ footer .footer-contenedor {
         justify-content: center;
         width: 170px;
         height: auto; }
+        .rebajas-pag .rebajas-contenedor .imagenes-rebajas a .texto-rebajas {
+          left: 25px;
+          font-size: 8px;
+          width: 35px; }
         .rebajas-pag .rebajas-contenedor .imagenes-rebajas a img {
           width: 130px;
           height: 130px; }
@@ -1192,9 +1241,14 @@ footer .footer-contenedor {
   header h2 {
     font-family: 'Lato', sans-serif; }
     header h2 div {
-      justify-content: space-between; } }
+      justify-content: space-between; }
+  main .hombre-mujer div a img {
+    width: 320px;
+    height: 320px; } }
 
 @media screen and (max-width: 991px) {
+  header {
+    position: relative; }
   .rebajas-pag .rebajas-contenedor .carousel-rebajas {
     width: 250px;
     height: 250px; } }
@@ -1229,11 +1283,15 @@ footer .footer-contenedor {
       display: none; }
   .nosotros-pag .nosotros-contenedor {
     display: flex;
-    flex-direction: column; }
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 120px; }
     .nosotros-pag .nosotros-contenedor .nosotros-info {
-      width: 100%;
+      width: 88%;
       justify-content: center;
-      align-items: center; }
+      align-items: center;
+      text-align: center;
+      padding: 5px; }
     .nosotros-pag .nosotros-contenedor .nosotros-lista {
       display: none; } }
 
@@ -1246,9 +1304,8 @@ footer .footer-contenedor {
     main .disciplinas .disciplinas-contenedor div a {
       gap: 5px; }
       main .disciplinas .disciplinas-contenedor div a img {
-        width: 340px;
-        height: 210px;
-        padding: 5px; }
+        width: 320px;
+        height: 200px; }
   .contactos-pag {
     display: flex;
     flex-direction: column; }
@@ -1283,7 +1340,9 @@ footer .footer-contenedor {
 
 @media screen and (max-width: 800px) {
   main .marcas div a .logo-converse {
-    display: none; } }
+    display: none; }
+  header h2 {
+    font-size: 16px; } }
 
 @media screen and (max-width: 780px) {
   footer .footer-contenedor {
@@ -1327,6 +1386,17 @@ footer .footer-contenedor {
       height: 400px; } }
 
 @media screen and (max-width: 700px) {
+  main .hombre-mujer {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 100px; }
+    main .hombre-mujer div {
+      justify-content: center;
+      align-items: center;
+      margin: 15px; }
+      main .hombre-mujer div a img {
+        width: 330px;
+        height: 330px; }
   footer .suscripcion {
     width: auto;
     justify-content: center;
@@ -1539,6 +1609,11 @@ footer .footer-contenedor {
         justify-content: center;
         width: 110px;
         height: auto; }
+        .rebajas-pag .rebajas-contenedor .imagenes-rebajas a .texto-rebajas {
+          left: 5px;
+          font-size: 7px;
+          font-weight: 300;
+          width: 30px; }
         .rebajas-pag .rebajas-contenedor .imagenes-rebajas a img {
           width: 110px;
           height: 110px;
@@ -1607,6 +1682,12 @@ footer .footer-contenedor {
       width: 85px;
       height: 75px;
       margin: 12px; }
+  main .recomendados .recomendados-contenedor div a .rebajas-recomendados {
+    font-size: 10px;
+    width: 45px; }
+  main .recomendados .recomendados-contenedor div a img {
+    width: 150px;
+    height: 150px; }
   main .moda {
     margin-top: 20px;
     display: flex;
@@ -1649,6 +1730,9 @@ footer .footer-contenedor {
     main .moda div h2 {
       font-size: 30px;
       margin: 10px 10px 20px; }
+  main .hombre-mujer div a img {
+    height: 280px;
+    width: 280px; }
   .contactos-pag {
     display: flex;
     flex-direction: column; }
