--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -9,7 +9,7 @@ header{
         text-align: center;
         font-size: 20px;
         font-family: 'Lato', sans-serif;;
-        font-style: italic;
+        font-weight: 700;
         @extend %flex;
         background-color: $color-primario;
         height: 40px;
