--- a/scss/components/_layouts.scss
+++ b/scss/components/_layouts.scss
@@ -64,6 +64,15 @@ main{
                     justify-content: center;
                     width: auto;
                     height: auto;
+                    .rebajas-recomendados{
+                        position: absolute;
+                        z-index: 20px;
+                        width: 52px;
+                        font-weight: 600;
+                        background-color: $color-terciario;
+                        color: $color-secundario;
+                        font-size: 12px;
+                    }
                     img{
                         width: 170px;
                         height: 170px;
@@ -127,6 +136,7 @@ main{
                         @extend %flex;
                         margin: top 0;
                         object-fit: cover;
+                        border-radius: 2%;
                     }
                     h3{
                         text-align: center;
@@ -172,6 +182,7 @@ main{
                         transition: 0.5s;
                         transition-delay: 0.05s;
                         flex-wrap: wrap;
+                        border-radius: 5%;
                     }
                     img:hover{
                         transform: scale(1.05);
@@ -179,6 +190,29 @@ main{
                         -webkit-box-shadow: 10px 10px 16px -7px rgba(0,0,0,0.75);
                         -moz-box-shadow: 10px 10px 16px -7px rgba(0,0,0,0.75);
                     }  
+                }
+            }
+        }
+    }
+    .hombre-mujer{
+        display: flex;
+        justify-content: space-evenly;
+        margin-top: 100px;
+        margin-bottom: 200px;
+        width: 100%;
+        div{
+            width: auto;
+            height: auto;
+            display: flex;
+            a{
+                img{
+                    width: 370px;
+                    height: 370px;
+                    transition-duration: 1.5s;
+                    border-radius: 5%;
+                }
+                img:hover{
+                    transform: rotateY(360deg);
                 }
             }
         }
@@ -242,6 +276,7 @@ main{
                     height: 220px;
                     text-align: center;
                     justify-content: center;
+                    border-radius: 2%;
                 
                 }
                 h3{
@@ -331,6 +366,7 @@ main{
                     height: 220px;
                     text-align: center;
                     justify-content: center;
+                    border-radius: 2%;
                 }
                 h3{
                     text-align: center;
@@ -418,6 +454,7 @@ main{
                     height: 220px;
                     text-align: center;
                     justify-content: center;
+                    border-radius: 2%;
                 }
                 h3{
                     text-align: center;
@@ -501,16 +538,25 @@ main{
                 justify-content: center;
                 width: 270px;
                 height: auto;
+                position: relative;
                 .texto-rebajas{
+                    position: absolute;
                     z-index: 10px;
                     top: 5px;
-                    left: 10%;
+                    left: 30px;
+                    width: 50px;
+                    font-weight: 600;
+                    background-color: $color-terciario;
+                    color: $color-secundario;
+                    font-size: 12px;
                 }
                 img{
                     width: 220px;
                     height: 220px;
                     text-align: center;
                     justify-content: center;
+                    position: relative;
+                    border-radius: 2%;
                     } 
                 .producto-rebaja{
                     text-align: center;
