--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -2,8 +2,10 @@ footer{
     .suscripcion{
         flex: 1 1 25%;
         margin: 10px;
+        width: auto;
         .suscripcion-titulo{
             h2{
+                width: auto;
                 font-size: 24px;
                 font-family: 'Lato', sans-serif;
                 text-align: center;
