--- a/css/estilos.css
+++ b/css/estilos.css
@@ -670,7 +670,8 @@ footer .suscripcion {
 footer .footer-contenedor {
   display: grid;
   grid-template-columns: repeat 4, 25%;
-  grid-template-areas: "footer footer footer footer" "footer footer footer footer";
+  grid-template-areas: "footer footer footer footer"
+ "footer footer footer footer";
   margin-bottom: 0;
   justify-content: space-around; }
   footer .footer-contenedor div {
@@ -1367,7 +1368,8 @@ footer .footer-contenedor {
   footer .footer-contenedor {
     display: grid;
     grid-template-columns: repeat 2, 1fr;
-    grid-template-areas: "footer footer" "footer footer";
+    grid-template-areas: "footer footer"
+ "footer footer";
     margin-bottom: 0; }
     footer .footer-contenedor div {
       grid-area: "footer";
@@ -1812,7 +1814,8 @@ footer .footer-contenedor {
   footer .footer-contenedor {
     display: grid;
     grid-template-columns: repeat 2, 1fr;
-    grid-template-areas: "footer footer" "footer footer";
+    grid-template-areas: "footer footer"
+ "footer footer";
     margin-bottom: 0;
     margin-top: 20px; }
     footer .footer-contenedor div {
