--- a/scss/components/_layouts.scss
+++ b/scss/components/_layouts.scss
@@ -309,6 +309,12 @@ main{
                 }
             }
         }
+        #carritoContenedor{
+            .imagen-carrito{
+                width: 220px;
+                height: 220px;
+            }
+        }
     }
 }
 
